--- a/chippy_rota/templates/index.html
+++ b/chippy_rota/templates/index.html
@@ -69,6 +69,12 @@ function closePopup() {
     popup.style.display = "none";
 }
 
+function show_edit_menu(id){
+    document.getElementById("update_rota_menu").style.display = "flex"
+    document.getElementById("form_shift_id").value = id
+}
+
+
     </script>
 </body>
 </html>
