--- a/chippy_rota/static/style.css
+++ b/chippy_rota/static/style.css
@@ -5,7 +5,7 @@ body {
 
 .employee-box {
     display: flex;
-    align-items: center;
+    align-items: left;
     justify-content: space-between;
     background-color: #666666;
     border: 1px solid black;
@@ -13,8 +13,8 @@ body {
     margin-bottom: 10px;
     color: white;
     width: 600px;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: 2%;
 }
 
 .employee-info {
@@ -85,4 +85,15 @@ button:hover {
     right: 15px;
     font-size: 24px;
     cursor: pointer;
+}
+td{
+    border-bottom: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+}
+th{
+    border-bottom: 3px solid black;
+}
+table{
+    padding:3px;
+    padding-bottom: 50px;
 }
