--- a/chippy_rota/static/style.css
+++ b/chippy_rota/static/style.css
@@ -51,7 +51,19 @@ button:hover {
 }
 
 /* Popup Modal Styles */
-.popup {
+.popup-shifts{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+.popup-availability{
     display: none;
     position: fixed;
     z-index: 1;
@@ -64,12 +76,21 @@ button:hover {
     align-items: center;
 }
 
-.popup-content {
+.popup-content-shifts {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
     width: 300px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+.popup-content-availability {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 600px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     position: relative;
 }
