added time to table

--- a/chippy_rota/templates/employee_availability.html
+++ b/chippy_rota/templates/employee_availability.html
@@ -9,17 +9,24 @@
             <th>Fri</th>
             <th>Sat</th>
         </tr>
-        <tr>
-            <form action=""></form>
-            <td><input type="checkbox" name="mon" id="mon" value="True"></td>
-            <td><input type="checkbox" name="tue" id="tue" value="True"></td>
-            <td><input type="checkbox" name="wed" id="wed" value="True"></td>
-            <td><input type="checkbox" name="thur" id="thur" value="True"></td>
-            <td><input type="checkbox" name="fri" id="fri" value="True"></td>
-            <td><input type="checkbox" name="sat" id="sat" value="True"></td>
-        </tr>
-        
-
+        <form action="">
+            <tr>
+                <td><input type="checkbox" name="mon" id="mon" value="True"></td>
+                <td><input type="checkbox" name="tue" id="tue" value="True"></td>
+                <td><input type="checkbox" name="wed" id="wed" value="True"></td>
+                <td><input type="checkbox" name="thur" id="thur" value="True"></td>
+                <td><input type="checkbox" name="fri" id="fri" value="True"></td>
+                <td><input type="checkbox" name="sat" id="sat" value="True"></td>
+            </tr>
+            <tr style="text-align: center;">
+                <td><input type="time" name="monRange" id="monRange" value="True"></td>
+                <td><input type="time" name="tueRange" id="tueRange" value="True"></td>
+                <td><input type="time" name="wedRange" id="wedRange" value="True"></td>
+                <td><input type="time" name="thuRange" id="thuRange" value="True"></td>
+                <td><input type="time" name="friRange" id="friRange" value="True"></td>
+                <td><input type="time" name="satRange" id="satRange" value="True"></td>
+            </tr>
+        </form>
 
     </table>
 </div>
