--- a/chippy_rota/templates/employee_availability.html
+++ b/chippy_rota/templates/employee_availability.html
@@ -1,32 +1,46 @@
 <div>
     <h3>Enter availability for {{ name }}</h3>
-    <table>
-        <tr>
-            <th>Mon</th>
-            <th>Tue</th>
-            <th>Wed</th>
-            <th>Thur</th>
-            <th>Fri</th>
-            <th>Sat</th>
-        </tr>
-        <form action="">
+    
+    <form action="">
+        <table>
             <tr>
-                <td><input type="checkbox" name="mon" id="mon" value="True"></td>
-                <td><input type="checkbox" name="tue" id="tue" value="True"></td>
-                <td><input type="checkbox" name="wed" id="wed" value="True"></td>
-                <td><input type="checkbox" name="thur" id="thur" value="True"></td>
-                <td><input type="checkbox" name="fri" id="fri" value="True"></td>
-                <td><input type="checkbox" name="sat" id="sat" value="True"></td>
+                <th>Time</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Wed</th>
+                <th>Thur</th>
+                <th>Fri</th>
+                <th>Sat</th>
+            </tr>
+
+            <tr>
+                <td><b>Days</b></td>
+                <td><input type="checkbox" name="mon" id="mon" value="True" onclick="toggle_option('mon')"></td>
+                <td><input type="checkbox" name="tue" id="tue" value="True" onclick="toggle_option('tue')"></td>
+                <td><input type="checkbox" name="wed" id="wed" value="True" onclick="toggle_option('wed')"></td>
+                <td><input type="checkbox" name="thur" id="thur" value="True" onclick="toggle_option('thu')"></td>
+                <td><input type="checkbox" name="fri" id="fri" value="True" onclick="toggle_option('fri')"></td>
+                <td><input type="checkbox" name="sat" id="sat" value="True" onclick="toggle_option('sat')"></td>
             </tr>
             <tr style="text-align: center;">
-                <td><input type="time" name="monRange" id="monRange" value="True"></td>
-                <td><input type="time" name="tueRange" id="tueRange" value="True"></td>
-                <td><input type="time" name="wedRange" id="wedRange" value="True"></td>
-                <td><input type="time" name="thuRange" id="thuRange" value="True"></td>
-                <td><input type="time" name="friRange" id="friRange" value="True"></td>
-                <td><input type="time" name="satRange" id="satRange" value="True"></td>
+                <td><b>Start</b></td>
+                <td><input type="time" name="monStart" id="monStart" value="True" disabled></td>
+                <td><input type="time" name="tueStart" id="tueStart" value="True" disabled></td>
+                <td><input type="time" name="wedStart" id="wedStart" value="True" disabled></td>
+                <td><input type="time" name="thuStart" id="thuStart" value="True" disabled></td>
+                <td><input type="time" name="friStart" id="friStart" value="True" disabled></td>
+                <td><input type="time" name="satStart" id="satStart" value="True" disabled></td>
             </tr>
-        </form>
-
-    </table>
+            <tr style="text-align: center;">
+                <td><b>End</b></td>
+                <td><input type="time" name="monEnd" id="monEnd" value="True" disabled></td>
+                <td><input type="time" name="tueEnd" id="tueEnd" value="True" disabled></td>
+                <td><input type="time" name="wedEnd" id="wedEnd" value="True" disabled></td>
+                <td><input type="time" name="thuEnd" id="thuEnd" value="True" disabled></td>
+                <td><input type="time" name="friEnd" id="friEnd" value="True" disabled></td>
+                <td><input type="time" name="satEnd" id="satEnd" value="True" disabled></td>
+            </tr>
+        </table>
+        <input type="submit" value="Submit availability">
+    </form>
 </div>
