--- a/chippy_rota/templates/index.html
+++ b/chippy_rota/templates/index.html
@@ -48,6 +48,31 @@
     </div>
     {% endfor %}
 
+
+    <div class="availability-table-container"></div>
+        <table class="availability-table">
+            <tr class="availability-table-element">
+                <th class="availability-table-element">Employee</th>
+                <th class="availability-table-element">Monday</th>
+                <th class="availability-table-element">Tuesday</th>
+                <th class="availability-table-element">Wednesday</th> <!-- This shit doesnt want to align and i give up -->
+                <th class="availability-table-element">Thursday</th>
+                <th class="availability-table-element">Friday</th>
+                <th class="availability-table-element">Saturday</th>
+            </tr>
+            <tr>
+                <td>eid</td>
+                <td>def</td>
+                <td>geh</td>
+                <td>geh</td>
+                <td>geh</td>
+                <td>geh</td>
+                <td>geh</td>
+            </tr>
+        </table>
+    </div>
+
+
     <!-- Shifts Popup -->
     <div id="popup-shifts" class="popup-shifts">
         <div class="popup-content-shifts">
