new template, updated other templates, added func

--- a/chippy_rota/templates/employee_availability.html
+++ b/chippy_rota/templates/employee_availability.html
@@ -1,7 +1,7 @@
 <div>
     <h3>Enter availability for {{ name }}</h3>
     
-    <form action="">
+    <form action="/update_availability" method="post">
         <table>
             <tr>
                 <th>Time</th>
